--- a/VS/RacingSimulatorDynamic/RacingSimulatorDLL.vcxproj
+++ b/VS/RacingSimulatorDynamic/RacingSimulatorDLL.vcxproj
@@ -115,7 +115,7 @@
       <SDLCheck>true</SDLCheck>
       <PreprocessorDefinitions>_DEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <ConformanceMode>true</ConformanceMode>
-      <AdditionalIncludeDirectories>E:\Нетология\CPPM-project\VS\RacingSimulatorDynamic\RacingLib;E:\Нетология\CPPM-project\Source\RacingLib;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>..\..\Source\RacingLib;RacingLib;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
